

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Sep-2010 Jean-Marie Simonet
[#22319] American english spelling in en-GB language files. Thanks Bill.

08-Sep-2010 Andrew Eddie
 # Fixed issue [#22274] Mark items as required that prevent save (Michael Babker).
 # Fixed issue [#21902] Cannot assign template style to components [cache] (Jen Kramer McKibben, Klas Berlič1).
 # Fixed issue [#21447] Updated: Add ACL Create, Edit, & Edit State checks to Category Manager (Michael Babker, Elin Waring).
 # Changed default caching level to disabled on installation.
 # Fixed issue [#22171] Cannot edit a group to change parent once it is created (Jennifer Marriott, Amy Stephen).
 # Fixed issue [#20932] com_categories CategoryParent Field Permissions Check Additions (Omar Ramos).
 # Fixed issue [#22222] Newsflash inopérant (C. Tapuscrine, Omar Ramos, Bill Richardson, Michael Babker).
 # Fixed issue [#22322] Inappropriate language in code (Amy Stephen).
 # Fixed issue [#22095] Userfield shows button even when "readonly" (Thomas Hunziker, Michael Babker).
 # Fixed issue [#22185] beez2 missing level 4 image (Klas Berlič1, Angie Radtke).
 # Fixed issue [#21315] *ACL in edit screens issue (Jean-Marie Simonet).

07-Sep-2010 Jean-Marie Simonet
 # [#21666] New menu : form is empty when using the "Save" button. Thanks Michael.
 # [#22287] Save & New button in Menu Edit views. Thanks Michael.
 # [#22245] Default site metadata. Thanks Ole.

-------------------- 1.6.0 Beta9 Release [07-Sep-2010] ------------------

07-Sep-2010 Ian MacLennan
 # Updating sample data

06-Sep-2010 Ron Severdia
 # [#20942] Fixed extra whitespace in fieldsets (Thanks Viet Hoang Vu)
 ^ Updated Blueprint cheatsheet