@@ -54,7 +54,7 @@ COM_BANNERS_FIELD_ALT_DESC="Alternate text for the banner image."
 COM_BANNERS_FIELD_ALT_LABEL="Alternate Text"
 COM_BANNERS_FIELD_BANNEROWNPREFIX_DESC="Use own prefix or the client prefix"
 COM_BANNERS_FIELD_BANNEROWNPREFIX_LABEL="Use Own Prefix"
-COM_BANNERS_FIELD_BASENAME_DESC="Filename pattern which can contain<br/>__SITE__ for the site name<br/>__CATID__ for the category ID<br/>__CATNAME__ for the category name<br/>__CLIENTID__ for the client ID<br/>__CLIENTNAME__ for the client name<br/>__TYPE__ for the type<br/>__TYPENAME__ for the type name<br/>__BEGIN__ for the begin date<br/>__END__ for the end date"
+COM_BANNERS_FIELD_BASENAME_DESC="Filename pattern which can contain<br />__SITE__ for the site name<br />__CATID__ for the category ID<br />__CATNAME__ for the category name<br />__CLIENTID__ for the client ID<br />__CLIENTNAME__ for the client name<br />__TYPE__ for the type<br />__TYPENAME__ for the type name<br />__BEGIN__ for the begin date<br />__END__ for the end date"
 COM_BANNERS_FIELD_BASENAME_LABEL="Filename"
 COM_BANNERS_FIELD_CATEGORY_DESC="Choose a category for this banner"
 COM_BANNERS_FIELD_CATEGORY_LABEL="Category"
