@@ -5,5 +5,5 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_SYSTEM_LANGUAGEFILTER="System - Language Filter"
-PLG_SYSTEM_LANGUAGEFILTER_XML_DESCRIPTION="This plugin filters the displayed content depending on language.<br><strong>This plugin is to be used only when the module Language Switcher is published.</strong>"
+PLG_SYSTEM_LANGUAGEFILTER_XML_DESCRIPTION="This plugin filters the displayed content depending on language.<br /><strong>This plugin is to be used only when the module Language Switcher is published.</strong>"
 
