@@ -84,7 +84,7 @@ INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Important!</strong>: It is strongly recomm
 INSTL_SITE_LOAD_SAMPLE_DESC2="Before leaving the installation, you can populate the site database with data. There are three ways to do this:"
 INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1. Default sample data</strong> can be inserted. To do this click the Install Sample Data button."
 INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>2a. A Joomla! 1.6.x compatible SQL script file</strong> can be uploaded from a localhost and executed on the site. This could be for installing localised sample data or restoring a Joomla! 1.5.x backup. The script should have the correct table prefixes, be in UTF-8 encoding and comply with the Joomla! 1.5.x database schema."
-INSTL_SITE_LOAD_SAMPLE_DESC5="<strong>2b. Migrate content from previous versions of Joomla!</strong>. Selecting the Load Migration Script option enables support for the migration of older Joomla! 1.0.x version database dumps to a new Joomla! 1.5.x site. The required conversions are performed on-the-fly and the migration script file can be created on the older site by using the <code>com_migrator</code> component.<br/> For further information about the component and the migration procedure, please see the <a href="_QQ_"http://docs.joomla.org/Migrating_from_1.0.x_to_1.5_Stable"_QQ_" target="_QQ_"blank"_QQ_">Joomla! 1.5 Migration Guide</a>."
+INSTL_SITE_LOAD_SAMPLE_DESC5="<strong>2b. Migrate content from previous versions of Joomla!</strong>. Selecting the Load Migration Script option enables support for the migration of older Joomla! 1.0.x version database dumps to a new Joomla! 1.5.x site. The required conversions are performed on-the-fly and the migration script file can be created on the older site by using the <code>com_migrator</code> component.<br /> For further information about the component and the migration procedure, please see the <a href="_QQ_"http://docs.joomla.org/Migrating_from_1.0.x_to_1.5_Stable"_QQ_" target="_QQ_"blank"_QQ_">Joomla! 1.5 Migration Guide</a>."
 INSTL_SITE_LOAD_SAMPLE_DESC6="You can upload uncompressed SQL script files, zip-packed script files and gz-packed script files. Packed files may contain only one SQL script file. If your file is too big to handle or causing memory and time limit errors, upload the uncompressed file into the /installation/sql/migration/ folder. Rename it <code>migrate.sql</code> and then tick the "_QQ_"I have already uploaded..."_QQ_" option.<br />"
 INSTL_SITE_LOAD_SAMPLE_DESC7="<strong>3. Clean Installation</strong>: If you wish to perform a clean installation, enter the site name, admin email and choose a password. Then proceed to the final step by clicking <em>Next</em>."
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Install Sample Data"
@@ -97,7 +97,7 @@ INSTL_COMPLETE_TITLE="Congratulations! Joomla! is now installed."
 INSTL_COMPLETE_DESC1="Click the Site button to view your Joomla! Web site or the Admin button to take you to your administrator login."
 INSTL_COMPLETE_DESC2="On the Joomla! Help Site, you will find an easy, step-by-step guide to installing your own language pack in Joomla! You will find a list of links to available language packs."
 INSTL_COMPLETE_DESC3="Click the button on the right to open the Help Site in a new window."
-INSTL_COMPLETE_REMOVE_INSTALLATION="PLEASE REMEMBER TO COMPLETELY<br/>REMOVE THE INSTALLATION DIRECTORY.<br />You will not be able to proceed beyond this point until the installation directory has been removed. This is a security feature of Joomla!."
+INSTL_COMPLETE_REMOVE_INSTALLATION="PLEASE REMEMBER TO COMPLETELY<br />REMOVE THE INSTALLATION DIRECTORY.<br />You will not be able to proceed beyond this point until the installation directory has been removed. This is a security feature of Joomla!."
 INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Administration Login Details"
 INSTL_COMPLETE_LANGUAGE_1="Joomla! in your own language?"
 INSTL_COMPLETE_LANGUAGE_2="Visit the Joomla! Help Site for more information and downloads."
@@ -106,7 +106,7 @@ INSTL_COMPLETE_LANGUAGE_2="Visit the Joomla! Help Site for more information and 
 INSTL_DATABASE_COULD_NOT_CONNECT="Could not connect to the database. Connector returned number: %s"
 INSTL_DATABASE_EMPTY_NAME=""
 INSTL_DATABASE_ERROR_BACKINGUP="Some errors occurred in backing up the database."
-INSTL_DATABASE_ERROR_CREATE="An error occurred while trying to create the database %s.<br/>The user may not have enough privileges to create a database. The required database may need to be created separately before you can install Joomla!."
+INSTL_DATABASE_ERROR_CREATE="An error occurred while trying to create the database %s.<br />The user may not have enough privileges to create a database. The required database may need to be created separately before you can install Joomla!."
 INSTL_DATABASE_ERROR_DELETE="Some errors occurred deleting the database."
 INSTL_DATABASE_FIELD_VALUE_REMOVE="Remove"
 INSTL_DATABASE_FIELD_VALUE_BACKUP="Backup"
